# ollama_grace_agent_v2

./: .gitignore  CLAUDE.md  README.md  a_class_method_md_format.md  a_memo_dev.txt  a_test_md_format.md  agent_cache.py  agent_main.py  agent_parallel_search.py  agent_rag.py  agent_tools.py  celery_config.py  celery_tasks.py  claude_jp.md  config.py  config.yml  disable_button.md  down_load_non_qa_rag_data_from_huggingface.md  down_load_non_qa_rag_data_from_huggingface.py  models.py  pyproject.toml  qdrant_client_wrapper.py  qdrant_delete_collection.py  readme_autonomous_agent.md  readme_make_env.md  readme_rag.md  readme_react_reflection.md  readme_usage_tools.md  regex_mecab.md  regex_mecab.py  requirements.txt  run_benchmark.py  run_benchmark.sh  run_benchmark_all.sh  start_celery.sh
.github/workflows/: ci.yml
OUTPUT/: cc_news.txt  cc_news_2per.csv  cc_news_2per_768.csv  clean.py
checkpoints/20260521_051850/: step1.json  step2.json  step3.json
checkpoints/20260524_225404/: step1.json  step2.json  step3.json
chunking/: __init__.py  async_api_client.py  checkpoint_manager.py  csv_text_to_chunks_text_csv.py  models.py  prompts.py  regex_string.py  requirements.txt  utils.py
chunking/doc/: async_api_client.md  check_async.md  csv_text_to_chunks_text_csv.md  make_qa_register_qdrant.md  memo.txt  step1.md  step1_2.md  step1_2_3.md  step2.md  step3.md
chunks_output/: cc_news_2per_chunks.csv  cc_news_2per_chunks_simple.csv
config/: grace_config.yml
datasets/: cc_news_train_500_20260506_191512_metadata.json  range3_cc100_ja_train_1000_20260216_062050_metadata.json
datasets/fineweb-2-edu-japanese/: README.md
docker-compose/: memo.txt
docs/: agent.md  agent_rag.md  bench_result.md  benchmark_files.md  benchmark_todo.md  grace_agent_performance_comparison_spec.md  grace_agent_refactor_playbook.md  llm_api_comparison_v3.md  migration_openai2ollama.md  ollama_logic_port_todo_june13.md  ollama_modernization_todo_june13.md  ollama_reform_june2026.md  ollama_v1_to_v2_refactoring.md  react_reflection.md  reasoning_model_token_budget_fix_june14.md  setup_and_install.md
eval/: README.md  __init__.py  ab_compare.py  build_dataset.py  calibrate.py  metrics.py  run_eval.py
grace/: __init__.py  benchmark.py  calibration.py  confidence.py  config.py  executor.py  intervention.py  llm_compat.py  memory.py  planner.py  replan.py  schemas.py  tools.py
grace/doc/: benchmark.md  planner.md  react.md
grace/docs/: confidence.md  executor.md  grace_process.md  intervention.md  planner.md  planner_executor.md  react_tools_anthropic.md  react_tools_use.md  reasoning.md  replan.md  schemas.md  step_process.md  test_executor_planner.md  test_planner_create_plan.md  tools.md  web_search.md  web_search_upgrade.md
helper/: helper_api.py  helper_embedding.py  helper_embedding_fastembed.py  helper_embedding_sparse.py  helper_llm.py  helper_rag.py  helper_rag_qa.py  helper_rag_ui.py  helper_text.py
logs/: benchmark_results.csv  unanswered_questions.csv
output_chunked/: cc_news_2per_768_chunks.csv  cc_news_2per_768_chunks_simple.csv  cc_news_2per_chunks.csv  cc_news_2per_chunks_simple.csv
qa_generation/: __init__.py  data_io.py  evaluation.py  models.py  pipeline.py  semantic.py  smart_qa_generator.py
qa_generation/doc/: evaluation.md  pipeline.md  semantic.md  smart_qa_generator.md
qa_output/: qa_pairs_cc_news_2per_768_chunks.csv  qa_pairs_cc_news_2per_chunks.csv  qa_pairs_combined_chunks.csv  qa_pairs_wikipedia_ja_1per_chunks.csv
qa_output/pipeline/: combined_chunks_20260207_033049.csv  combined_chunks_20260207_033231.csv  coverage_cc_news_1per_chunks_20260207_205921.json  coverage_cc_news_1per_chunks_20260207_211509.json  coverage_cc_news_1per_chunks_20260505_080125.json  coverage_cc_news_1per_chunks_20260505_094852.json  coverage_cc_news_1per_chunks_20260505_095442.json  coverage_cc_news_1per_chunks_20260506_193019.json  coverage_cc_news_2per_768_chunks_20260525_041321.json  coverage_cc_news_2per_chunks_20260521_070334.json  coverage_cc_news_2per_chunks_20260521_091341.json  coverage_cc_news_2per_chunks_20260607_084011.json  coverage_cc_news_2per_chunks_20260607_091150.json  coverage_cc_news_2per_chunks_20260610_030009.json  coverage_combined_chunks_20260207_033049_20260207_033119.json  coverage_combined_chunks_20260207_033231_20260207_033315.json  coverage_wikipedia_ja_1per_chunks_20260207_211557.json  qa_pairs_cc_news_2per_768_chunks_20260525_041321.csv  qa_pairs_cc_news_2per_768_chunks_20260525_041321.json  qa_pairs_cc_news_2per_chunks_20260521_091341.csv  qa_pairs_cc_news_2per_chunks_20260521_091341.json  qa_pairs_cc_news_2per_chunks_20260607_084011.csv  qa_pairs_cc_news_2per_chunks_20260607_084011.json  qa_pairs_cc_news_2per_chunks_20260607_091150.csv  qa_pairs_cc_news_2per_chunks_20260607_091150.json  qa_pairs_cc_news_2per_chunks_20260610_030009.csv  qa_pairs_cc_news_2per_chunks_20260610_030009.json  qa_pairs_combined_chunks_20260207_033049_20260207_033119.csv  qa_pairs_combined_chunks_20260207_033049_20260207_033119.json  qa_pairs_combined_chunks_20260207_033231_20260207_033315.csv  qa_pairs_combined_chunks_20260207_033231_20260207_033315.json  qa_pairs_wikipedia_ja_1per_chunks_20260207_211557.csv  qa_pairs_wikipedia_ja_1per_chunks_20260207_211557.json  summary_cc_news_1per_chunks_20260207_205921.json  summary_cc_news_1per_chunks_20260207_211509.json  summary_cc_news_1per_chunks_20260505_080125.json  summary_cc_news_1per_chunks_20260505_094852.json  summary_cc_news_1per_chunks_20260505_095442.json  summary_cc_news_1per_chunks_20260506_193019.json  summary_cc_news_2per_768_chunks_20260525_041321.json  (+9 more)
qa_qdrant/: __init__.py  make_qa.py  make_qa_register_qdrant.py  register_to_qdrant.py
services/: __init__.py  agent_service.py  cache_service.py  config_service.py  dataset_service.py  file_service.py  json_service.py  log_service.py  prompts.py  qa_service.py  qdrant_service.py  token_service.py
tests/: README.md  __init__.py  conftest.py  test_make_qa_register_qdrant_csv.py
tests/grace/: __init__.py  (+20 more)
tools/: rag_data_preprocessor_app.py
ui/: __init__.py  app.py
(+71 files in other folders)
