[project]
name = "ollama-grace-agent-v2"
version = "0.1.0"
description = "GRACE Agent (Ollama local-LLM edition) v2 — autonomous RAG agent with eval/calibration/memory layers"
requires-python = ">=3.13,<3.14"
dependencies = [
    # ----------------------------------------------------------------
    # Core: LLM クライアント / トークン
    #   既定は Ollama（ローカルLLM）。Ollama は OpenAI 互換エンドポイント経由で
    #   利用するため openai SDK をクライアントとして使用する（API キー不要）。
    # ----------------------------------------------------------------
    "openai==1.100.2", # Ollama（OpenAI 互換 /v1）クライアント。任意で OpenAI も利用可
    "tiktoken==0.12.0", # トークンカウント（cl100k_base 近似）
    # ----------------------------------------------------------------
    # Core: Webアプリ・UI
    # ----------------------------------------------------------------
    "streamlit==1.48.1",
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "gradio==5.44.1",
    # ----------------------------------------------------------------
    # Core: ベクターDB
    # ----------------------------------------------------------------
    "qdrant-client==1.15.1",
    # ----------------------------------------------------------------
    # Core: タスクキュー
    # ----------------------------------------------------------------
    "celery==5.5.3",
    "redis==6.2.0",
    "flower==2.0.1",
    "kombu==5.5.4",
    # ----------------------------------------------------------------
    # Core: データ処理
    # ----------------------------------------------------------------
    "pydantic==2.11.7",
    "python-dotenv==1.1.1", # dotenv==0.9.9 は削除（非公式スタブ）
    "pyyaml==6.0.2",
    "numpy==2.3.2",
    "pandas==2.3.1",
    "pyarrow==21.0.0",
    # ----------------------------------------------------------------
    # Core: HTTP / 非同期
    # ----------------------------------------------------------------
    "httpx==0.28.1",
    "aiohttp==3.13.2",
    "requests==2.32.5",
    # ----------------------------------------------------------------
    # NLP / ML
    # ----------------------------------------------------------------
    "spacy==3.8.11",
    "datasets==4.4.1",
    "huggingface-hub==0.34.4",
    "tenacity==9.1.2",
    # ----------------------------------------------------------------
    # DB
    # ----------------------------------------------------------------
    "sqlalchemy==2.0.42",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    # ----------------------------------------------------------------
    # ユーティリティ
    # ----------------------------------------------------------------
    "python-multipart==0.0.20",
    "rich==13.9.4",
    "tqdm==4.67.1",
    "typer==0.15.1",
    "click==8.2.1",
    "jinja2==3.1.6",
    "pillow==11.3.0",
    "gitpython==3.1.45",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiosignal==1.4.0",
    "altair==5.5.0",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "attrs==25.3.0",
    "billiard==4.2.3",
    "blinker==1.9.0",
    "blis==1.3.3",
    "brotli==1.1.0",
    "cachetools==6.1.0",
    "catalogue==2.0.10",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "cloudpathlib==0.23.0",
    "confection==0.1.5",
    "cymem==2.0.13",
    "dill==0.4.0",
    "distro==1.9.0",
    "ffmpy==0.5.0",
    "filelock==3.16.1",
    "frozenlist==1.8.0",
    "fsspec==2024.12.0",
    "gitdb==4.0.12",
    "gradio-client==1.12.1",
    "h11==0.16.0",
    "h2==4.2.0",
    "hf-xet==1.1.9",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httplib2==0.31.0",
    "humanize==4.14.0",
    "hyperframe==6.1.0",
    "idna==3.10",
    "jiter==0.10.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.4.1",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "multidict==6.7.0",
    "multiprocess==0.70.18",
    "murmurhash==1.0.15",
    "narwhals==2.1.2",
    "orjson==3.10.14",
    "packaging==25.0",
    "pandas-stubs==2.3.2.250827",
    "portalocker==3.2.0",
    "preshed==3.0.12",
    "prometheus-client==0.23.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic-core==2.33.2",
    "pydeck==0.9.1",
    "pydub==0.25.1",
    "pygments==2.19.1",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "referencing==0.36.2",
    "regex==2025.11.3",
    "rpds-py==0.27.0",
    "rsa==4.9.1",
    "ruff==0.12.11",
    "safehttpx==0.1.6",
    "semantic-version==2.10.0",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smart-open==7.5.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "srsly==2.5.2",
    "starlette==0.41.3",
    "thinc==8.3.10",
    "toml==0.10.2",
    "tomlkit==0.13.2",
    "tornado==6.5.2",
    "typer-slim==0.20.0",
    "types-pytz==2025.2.0.20250809",
    "typing-inspection==0.4.1",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "vine==5.1.0",
    "wasabi==1.1.3",
    "watchdog==6.0.0",
    "wcwidth==0.2.14",
    "weasel==0.4.3",
    "websockets==14.1",
    "wrapt==2.0.1",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "celery-types==0.23.0",
    "mecab-python3==1.0.12",
    "fastembed>=0.8.0",
    "audioop-lts==0.2.2",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "docstring-parser==0.18.0",
    "greenlet==3.4.0 ; platform_machine == 'AMD64' or platform_machine == 'WIN32' or platform_machine == 'aarch64' or platform_machine == 'amd64' or platform_machine == 'ppc64le' or platform_machine == 'win32' or platform_machine == 'x86_64'",
    "groovy==0.1.2",
    "grpcio==1.80.0",
    "iniconfig==2.3.0",
    "pluggy==1.6.0",
    "protobuf==5.29.6",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pywin32==311 ; sys_platform == 'win32'",
]

# ----------------------------------------------------------------
# 任意の外部 LLM プロバイダー（既定は Ollama・ローカル実行のため不要）
#   helper/ のマルチプロバイダー層は anthropic / google-genai を
#   try/except で任意 import する。これらを使う場合のみ追加インストールする:
#     uv pip install -e '.[providers]'
# ----------------------------------------------------------------
[project.optional-dependencies]
providers = [
    "anthropic==0.96.0", # Anthropic Claude を使う場合
    "google-genai",      # Gemini を使う場合
]

[tool.uv]
# uv の依存解決設定（tool.uv.dev-dependencies は廃止 → dependency-groups.dev を使用）

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: requires real Ollama (gemma4:e4b) and Qdrant running locally",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

# isort の first-party 判定を明示し、環境差（インストール有無）による I001 の
# ブレを防ぐ。CI（プロジェクト未インストール）とローカルで分類を一致させる。
[tool.ruff.lint.isort]
known-first-party = [
    "agent_cache", "agent_main", "agent_parallel_search", "agent_rag", "agent_tools",
    "celery_config", "celery_tasks", "chunking", "config", "grace", "helper",
    "main", "models", "qa_generation", "qa_qdrant", "qdrant_client_wrapper",
    "regex_mecab", "run_benchmark", "services", "tests", "ui", "tools",
    "down_load_non_qa_rag_data_from_huggingface",
]
